deprecated/compiler/tests/run_pass/region_reduce_multiple.lg
/* Copyright 2014 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

struct point
{
  x: int,
  y: int,
}

task reduce_multiple(r: region<point>, p: point@r)
  , reduces<+>(r.{x, y})
{
  p->x += 1;
  p->y += 1;
}

task main()
{
  let r = region<point>(1);
  let p = new<point@r>();
  p->x = 0;
  p->y = 0;
  reduce_multiple(r, p);
  assert p->x == 1;
  assert p->y == 1;
}
