deprecated/compiler/tests/compile_fail/type_mismatch_partition1.lg
/* Copyright 2014 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#line 0

// fails-with:
// TypeError:
// tests/compile_fail/type_mismatch_partition1.lg:13:2:
// Type mismatch in partition: expected a region or ispace but got int

task main() {}

task foo()
{
  let r = region<int>(1);
  let c = coloring<r>();
  let x = 5;
  let p = partition<x, disjoint>(c);
}
